--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -138,7 +138,8 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 \subsubsection{Models}
 
 \begin{itemize}
-\item \textbf{Categorical models} - Includes logistic regression, probit regression,  binomial,  multinomial,  etc.  Cover the auxilliary variable trick, if there is time. See also pp.  390 of \cite{hoff2009first} for a useful warm-starting strategy.  
+\item \textbf{Categorical models} - Includes various kinds of regressions (logistic, probit regression,  binomial,  etc.)  Cover the auxilliary variable trick, if there is time. See also pp.  390 of \cite{hoff2009first} for a useful warm-starting strategy.
+\item \textbf{A racially polarized voting model} - The model loses conjugacy, because you take a linear combination of your beta-distributed parameters to get the parameter you feed into a binomial.
 \item \textbf{Bayesian deep learning models} -  Bayes and neural networks.   20-30 min w/ guest presenter,  Kyle Heuton,  Ph.D.  student,  computer science.
 \end{itemize}
 
