Update syllabus with some lightning chat ideas.

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -58,7 +58,6 @@ A portion of the workshop will be interactive,  including:
 \item Student ``lightning chat" (5 minute) presentations.  To allow for student-centered direction and autonomy,  students may choose any of the following:
 	\begin{itemize}
 	\item Selecting an idea from the "Lightning Chat ideas" section of the Appendix. 
-	\item Reviewing a demo with us from \url{https://github.com/avehtari/BDA_py_demos}.
 	\item Presentation of Python implementations of models from \cite{hoff2009first} ,  \cite{ gelman2013bayesian},  or the workshop.
 	\item Presentation of an exercise, e.g. from \cite{gelman2013bayesian} or \cite{hoff2009first}.
 	\item Presentation of a reading section,  blog,  etc.  of interest.
@@ -182,15 +181,23 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 
 \subsection{Intro} 
 \begin{itemize}
-\item Present \textit{Why most published research findings are false. } \cite{ioannidis2005most}.
-\item Present Bayesian analysis of multiple sudden infant deaths.  \cite{hill2004multiple}.
+\item Present \textit{Why most published research findings are false} \cite{ioannidis2005most}.
+\item Present Bayesian analysis of multiple sudden infant deaths  \cite{hill2004multiple}.
 \item Present a piece of Ghahramani, Z. (2015). Probabilistic machine learning and artificial intelligence. Nature, 521(7553), 452-459.  
 \end{itemize}
 
-\subsection{Model Checking} 
+\subsection{Bayesian linear regression} 
 \begin{itemize}
-\item Textbook sections TBD.
-\item Present a section of Gelman, A., Vehtari, A., Simpson, D., Margossian, C. C., Carpenter, B., Yao, Y., ... & Modrak, M. (2020). Bayesian workflow. arXiv preprint arXiv:2011.01808. 
+\item Use \texttt{pymc3} to fit a Bayesian linear regression or hierarchical Bayesian linear regression to some real data, and present your results.  
+\item Present one of the alternate derivations for the complete conditionals of Bayesian linear regression.
+\end{itemize}
+
+\subsection{Miscellaneous} 
+\begin{itemize}
+\item Present one of the tutorial examples from \texttt{pymc3}.
+\item Review a demo with us from \url{https://github.com/avehtari/BDA_py_demos}.
+\item Present a section of Gelman et al.'s Bayesian workflow paper \cite{gelman2020bayesian}. 
+\item Present a clip from the Chapter on Model Checking in Gelman et al.'s text \cite{gelman2013bayesian}.
 \end{itemize}
 
 \section{Student mini projects}
