--- a/syllabus/references_bayesian_modeling_workshop.bib
+++ b/syllabus/references_bayesian_modeling_workshop.bib
@@ -1,5 +1,12 @@
 \usepackage{url}
 
+@article{gelman2020bayesian,
+  title={Bayesian workflow},
+  author={Gelman, Andrew and Vehtari, Aki and Simpson, Daniel and Margossian, Charles C and Carpenter, Bob and Yao, Yuling and Kennedy, Lauren and Gabry, Jonah and B{\"u}rkner, Paul-Christian and Modr{\'a}k, Martin},
+  journal={arXiv preprint arXiv:2011.01808},
+  year={2020}
+}
+
 @article{hill2004multiple,
   title={Multiple sudden infant deaths--coincidence or beyond coincidence?},
   author={Hill, Ray},
