--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -189,6 +189,7 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 \subsection{Bayesian linear regression} 
 \begin{itemize}
 \item Use \texttt{pymc3} to fit a Bayesian linear regression or hierarchical Bayesian linear regression to some real data, and present your results.  
+\item Present Bayesian linear regression using a Gaussian basis function, or some other non-standard basis. 
 \item Present one of the alternate derivations for the complete conditionals of Bayesian linear regression.
 \end{itemize}
 
