Added some inference (Gibbs sampler, interpretation) for Bayesian linear regression.

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -189,8 +189,9 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 \subsection{Bayesian linear regression} 
 \begin{itemize}
 \item Use \texttt{pymc3} to fit a Bayesian linear regression or hierarchical Bayesian linear regression to some real data, and present your results.  
-\item Present Bayesian linear regression using a Gaussian basis function, or some other non-standard basis. 
+\item Present Bayesian linear regression using a Gaussian basis function, or some other non-standard basis.  
 \item Present one of the alternate derivations for the complete conditionals of Bayesian linear regression.
+\item Present additional information, e.g. via Gregory Gundersen's blog \url{http://gregorygundersen.com/blog/2020/02/04/bayesian-linear-regression/}.
 \end{itemize}
 
 \subsection{Miscellaneous} 
