Added tentative schedule to syllabus

--- a/syllabus/bayesian_modeling_workshop.tex
+++ b/syllabus/bayesian_modeling_workshop.tex
@@ -69,6 +69,17 @@ A portion of the workshop will be interactive,  including:
 \end{itemize}
 
 
+
+
+
+
+
+
+9:07
+Tomorrow:
+your MCMC stuff (very much ok to take whole day if desired/needed)
+(if time) mvn, the second part (conditional conjugacy, inference, missing data)
+
 \section{Topics}
 
 Below are topics we plan to cover in the workshop.
@@ -170,9 +181,47 @@ Here, again, we use MCMC and VI, but we need to employ more advanced (or at leas
 %
 %We would probably want to have a ``workshopping" section the day before they do their presentations.
 
+\section{Schedule}
+
+A tentative sketch of the schedule. 
+
+
+\textbf{Monday}
+\begin{itemize}
+\item Why bayes?
+\item Introduction to inference (plus activity)
+\item Multivariate normal, part I (motivation, fully conjugate models, cybersecurity application)
+\end{itemize}
+
+\textbf{Tuesday}
+
+\begin{itemize}
+\item Introduction to sampling (with activity) 
+\end{itemize}
+
+\textbf{Wednesday}
+\begin{itemize}
+\item Multivariate normal, part II (conditionally conjugate model, Gibbs sampler, activity, missing data)
+\item Bayesian linear regression, Part I
+\end{itemize}
+
+\textbf{Thursday}
+\begin{itemize}
+\item 	Bayesian linear regression, Part II (activity,  hierarchical bayesian linear regression)
+\item Gradient based sampling 
+\end{itemize}
+
+\textbf{Friday}
+\begin{itemize}
+\item Introduction to variational inference
+\item pymc3 activity 
+\item Bayesian deep learning
+\end{itemize}
+
 
 \bibliography{references_bayesian_modeling_workshop}{}
 \bibliographystyle{unsrt}
+
 
 
 \appendix
